# PsyBee

./: .gitignore  404.html  CNAME  Cargo.toml  book.toml  build.sh  deps.txt  events.csv  events.tsv  index.html  mkdocs.yml  pixi.toml  plot.py  pyproject.toml  readme.md  rustfmt.toml  sitemap.xml  tree.txt
.cargo/: config.toml
advanced/: index.html
api/: index.html
bubblesdemo/: CHANGELOG  LICENSE  README.rst  pyproject.toml
build-assets/: index.html  style.css
demos/: build_wasm.sh  profile.json
example_experiments/balloons/: Cargo.toml  mobile.toml
example_experiments/balloons/.cargo/: config.toml
example_experiments/balloons/src/: lib.rs
getting-started/: index.html
gratings/: Cargo.toml
gratings/examples/: stroop.rs
gratings/src/: lib.rs
gratings/src/input/: mod.rs
gratings/src/visual/: gratings.rs  mod.rs  pwindow.rs  shape.rs  text.rs
gratings/src/visual/shaders/: gratings.wgsl
ios-examples/hello_world/: Cargo.toml  mobile.toml
ios-examples/hello_world/src/: lib.rs  lib.rs.bac
naga-exp/: Cargo.toml
old_user-guide/: book.toml
photometry/: Cargo.toml
psybee/: Cargo.toml  av.py  build-sim.sh  build.sh  deleteme.py  physics.py  pyproject.toml  readme.md  stims.py  stims2.py  sweepup.py
psybee-proc/: Cargo.toml
psybee-py/: Cargo.toml  pyproject.toml  stub.py
psybee-py/src/: lib.rs
psybee-py2/: __init__.bac.py  build.sh
psybee/build_helpers/: build_ios.sh
psybee/build_helpers/ios-arm64/Python.framework/: Info.plist
psybee/build_helpers/ios-arm64/include/python3.10/: pyconfig-arm64.h
psybee/examples/test2/: Cargo.toml
psybee/examples/test2/src/: main.rs
psybee/psybee/: __init__.py
psybee/src/: app.rs  errors.rs  experiment.rs  lib.rs  options.rs  utils.rs
psybee/src/audio/: mod.rs
psybee/src/input/: mod.rs
psybee/src/input/video/: mod.rs
psybee/src/old_camera/: mod.rs
psybee/src/options/: mod.rs
psybee/src/renderer/: geometry.rs  helpers.rs  material.rs  mod.rs
psybee/src/renderer/shaders/: vertex.wgsl
psybee/src/renderer2/: geometry.rs  helpers.rs  material.rs  mod.rs  texture.rs  uniform_structs.rs  vertex.rs
psybee/src/renderer2/shaders/: colour.wgsl  texture.wgsl
psybee/src/visual/: color.rs  color2.rs  fill.rs  geometry.rs  mod.rs  window.rs
psybee/src/visual/stimuli/: animations.rs  base_stimulus.rs  color_stimulus.rs  gabor.rs  grid.rs  helpers.rs  image.rs  mod.rs  pattern.rs  shape.rs  sprite.rs  sprite_stimulus.rs  text.rs  text_stimulus.rs  vector.rs  video.rs
psybee/src/visual/stimuli/old/: _image.rs  _sprite.rs  image_stimulus.rs  pattern_stimulus.rs  video_stimulus.rs
psybee/src/visual/stimuli/patterns/: camera.rs  checkerboard.rs  image.rs  sprite.rs  uniform.rs  video.rs
psychophysics/: Cargo.toml  readme.md  tree.txt
psychophysics-py/: Cargo.toml  __init__.bac.py  build.sh  demo.py  pyproject.toml  readme.md  stub.py
psychophysics-py/psychophysics_py/: __init__.pyi
psychophysics-py/psychophysics_py/audio/: __init__.py  __init__.pyi
psychophysics-py/psychophysics_py/events/: __init__.py  __init__.pyi
psychophysics-py/psychophysics_py/geometry/: __init__.py  __init__.pyi
psychophysics-py/psychophysics_py/stimuli/: __init__.py  __init__.pyi
psychophysics-py/psychophysics_py/window/: __init__.py  __init__.pyi
psychophysics-py/src/: lib.rs
psychophysics/examples/: biosemi.rs  bounce.rs  camera.rs  camera2.rs  facetracking.rs  flicker.rs  gratings.rs  gstreamer.rs  image.rs  image2 copy.rs  macros.rs  simple.rs  stroop.rs  test.rs  test_screen.rs  transforms.rs  video_test.rs  vsync.rs  webcam.rs  winit.rs
psychophysics/old_examples/: facetracking.rs  flicker.rs  simple.rs  stroop.rs  test_screen.rs  vsync.rs
psychophysics/src/: errors.rs  lib.rs  utils.rs
psychophysics/src/audio/: mod.rs
psychophysics/src/input/: keyboard.rs  mod.rs
psychophysics/src/old_camera/: mod.rs
psychophysics/src/onnx/: mod.rs
psychophysics/src/serial/: mod.rs
psychophysics/src/visual/: color.rs  geometry.rs  gratings.rs  mod.rs  plain.rs  pwindow.rs  shape.rs  text.rs  window.rs
psychophysics/src/visual/shaders/: plain.wgsl
psychophysics/src/visual/stimuli/: base.rs  base_stimulus.rs  color_stimulus.rs  gabor_stimulus.rs  gratings.rs  gratings_stimulus.rs  image.rs  image_stimulus.rs  mod.rs  pattern_stimulus.rs  patterns.rs  shape.rs  sprite_stimulus.rs  text.rs  text_stimulus.rs  video.rs  video_gstreamer.rs  video_stimulus.rs  video_wasm.rs
psychophysics/src/visual/stimuli/patterns/: camera.rs  checkerboard.rs  gabor.rs  gabor_patch.rs  image.rs  mod.rs  polka_dots.rs  sine_gratings.rs  sprite.rs  uniform.rs  video.rs
psychophysics/src/visual/stimuli/shaders/: base.wgsl  image.wgsl
psychophysics/src/visual/stimuli_new/: base.rs  mod.rs
psychophysics/src/visual/stimuli_new/shaders/: base.wgsl
psychophysics/src/visual/stimuli_old/: base.rs  image.rs  mod.rs  text.rs
psychophysics/src/visual/stimuli_old/shaders/: gratings.wgsl  image.wgsl
psychophysics_macros/: Cargo.toml
psydk/: Cargo.toml  av.py  deleteme.py  physics.py  pyproject.toml  readme.md  stims.py  stims2.py  sweepup.py
psydk-proc/: Cargo.toml
ptest/: Cargo.toml  demo.py
pywrap/: Cargo.toml
rapier2d-py/: Cargo.toml  build.sh  test.py
rapier2d-py/src/: lib.rs
renderer/: Cargo.toml  geometry.rs  material.rs  mod.rs  rustfmt.toml  texture.rs  tree.txt  uniform_structs.rs
renderer/examples/: ct.rs  demo.rs  demo.rs2  sk_font.rs
renderer/examples/assets/shaders/: render.wgsl
renderer/shaders/: colour.wgsl  gradient.wgsl  texture.wgsl  vertex.wgsl
renderer/src/: affine.rs  bitmaps.rs  brushes.rs  colors.rs  font.rs  geoms.rs  lib.rs  prerenderd_scene.rs  renderer.rs  scenes.rs  shapes.rs  skia_backend.rs  styles.rs  text.rs  utils.rs  vello_backend.rs  wgpu_renderer.rs
renderer/src/effects/: mod.rs
research/: resources.md
scripts/: 2dnoise.py  Untitled.ipynb  __init__.py  bubble_simulation.py  filter_viz.py  install_gstreamer_manylinux.sh  mp.py  test.py  test_dropped_frames.py
search/: search_index.json
serial-triggers/: Cargo.toml  readme.md
src/: chapter_1.md  (+2 more)
(+123 files in other folders)
