[package]
name = "wgpu_gratings"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
pollster = "0.3"
wgpu = "0.18.0"
raw-window-handle = "0.6"
winit = { version = "0.27"}
rand = "0.8.5"
bytemuck = "1.14.0"
