[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
Name = "psybee"
Version = "0.1.2"
Authors = [{ name = "Marc Pabst", email = "mail@xxxxxxx.com" }]
Description = "Python bindings for PsyBee"
License = "MPL-2.0"
Requires-python = ">=3.10"
Classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
#dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
cargo-extra-args = "--features extension-module"
