[package]
name = "psychophysics-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "psychophysics_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
# local in ../psychophysics 
psychophysics = { path = "../psychophysics" }
