[package]
name = "psychophysics"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "psychophysics"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photometry = { path = "../photometry" }
env_logger = "0.10.1"
wgpu = "0.19.1"
raw-window-handle = "0.6"
winit = { version = "0.29"}
rand = "0.8.5"
bytemuck = { version="1.14.0", features=["derive"] }
nalgebra = "0.32.3"
glyphon = "0.5.0"
web-time = "1.0.0"
ndarray = "0.15.6"
image = "0.24.7"
cpal = "0.15.2"
anyhow = "1.0.75"
rodio = "0.17.3"
wasm-bindgen = "0.2.89"
fontdb = "0.16.0"
fastrand = "2.0.1"
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", rev = "6767b8a76cd2a1b57da0dd435488df112514afe8" }
futures-lite = "2.1.0"
async-executor = "1.8.0"
async-channel = "2.1.1"
log = "0.4.20"
simple_logger = "4.3.0"
atomic_float = "0.1.0"
num-traits = "0.2.17"
serialport = {version="4.3.0", optional = true}
spin_sleep = "1.1.1"
half = { version = "2.3.1", features = ["bytemuck"] }
palette = "0.7.3"
async-lock = "3.2.0"
async-trait = "0.1.75"
byte-slice-cast = "1.2.2"
derive_builder = "0.12.0"
strum = "0.25.0"
strum_macros = "0.25.3"
csv = "1.3.0"
thiserror = "1.0.56"
facetracking = { git = "https://github.com/marcpabst/facetracking-rs", version = "0.1.0-alpha.1" , optional= true}
imageproc = "0.23.0"
pollster = "0.3.0"
rapier2d = "0.18.0"
derive_more = "0.99.17"
rustfft = "6.2.0"
paste = "1.0.15"
derive-debug = "0.1.2"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "1.3.0"


[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios")))'.dependencies]
glib = "0.19.5"
gst = { package = "gstreamer", version = "0.22.3"}
gst-app = { package = "gstreamer-app", version = "0.22.0"}
gst-video = { package = "gstreamer-video", version = "0.22.3"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version="0.3.67", features=["Window", "HtmlVideoElement", "HtmlCanvasElement", "Document", "Element", "MediaStream", "Node", "CanvasRenderingContext2d", "ImageData"] }
js-sys = "0.3.66"
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.38"
wasm_thread = "0.2.0"

[features]
face = ["facetracking"]
serial = ["serialport"]
