[package]
name = "rapier2d-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "rapier2d_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
numpy = { version = "0.21.0", features = ["nalgebra"] }
paste = "1.0.15"
rapier2d = "0.19.0"

[dependencies.pyo3]
version = "0.21.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "multiple-pymethods" ]
