[package]
name = "rapier2d-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "rapier2d_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
derive_more = "0.99.17"
numpy = { version = "0.21.0", features = ["nalgebra"] }
paste = "1.0.15"
rapier2d = "0.19.0"
pywrap = { path = "../pywrap" }
pyo3 = { version = "0.21.2", features = ["multiple-pymethods", "abi3-py38", "extension-module", "experimental-inspect"] }

