[package]
name = "renderer"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# The dependencies here are independent from the workspace versions
[dependencies]
# When using this example outside of the original Vello workspace,
# remove the path property of the following Vello dependency requirement.
# vello = { version = "0.2.0", git = "https://github.com/linebender/vello", rev = "a00cd9f" }
# velato = { version = "0.3.0", git = "https://github.com/linebender/velato", rev = "2a3b0a3" }
anyhow = "1.0.86"
pollster = "0.3.0"
image = { version = "0.23.14", features = ["png", "jpeg"] }
itertools = "0.13.0"
wgpu = { git = "https://github.com/marcpabst/wgpu.git" }
nalgebra = "0.33.0"
custom_debug = "0.6.1"
bytemuck = "1.20.0"
vello = { git = "https://github.com/linebender/vello.git", rev = "4ec6b24" }
vello_svg = "0.6.0"
skrifa = "0.26.5"
psybee-proc = { path = "../psybee-proc" }
skia-safe = { version = "0.81.0", features = ["metal"] }
foreign-types-shared = "0.3.1"
metal = "0.31.0"
cosmic-text = "0.12.1"

[dev-dependencies]
winit = "0.30.8"

