[package]
name = "balloons"
version = "0.1.0"
authors = ["m. pabst <johndoe@example.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "balloons-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
log = "0.4.11"
mobile-entry-point = "0.1.0"
web-time = "1.0.0"
nalgebra = "0.32.3"
pollster = "0.3.0"
psychophysics = { path = "../../psychophysics"}
rand = "0.8.5"
rapier2d = "0.18.0"
rand_distr = "0.4.3"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
wgpu-subscriber = "0.1.0"

[profile.dev]
opt-level = 3

[build]
target-dir = "target"