[package]
name = "hello-world"
version = "0.1.0"
authors = ["m. pabst <johndoe@example.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hello-world-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
log = "0.4.11"
mobile-entry-point = "0.1.0"
psychophysics = { path = "../../psychophysics"}
web-time = "1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
wgpu-subscriber = "0.1.0"
